--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=api
 
 #puerto de pruebas
 server.port=8084
+
+#conexion con data base
+spring.datasource.url=jdbc:mysql://localhost:3306/voll-api
+spring.datasource.username=root
+spring.datasource.password=pa$$w0rd
