--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=api
 server.port=8084
 
 #conexion con data base
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/voll-api
 spring.datasource.username=root
 spring.datasource.password=pa$$w0rd
