--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/voll-api
 spring.datasource.username=root
 spring.datasource.password=pa$$w0rd
+
+
+#para modificar los parametros de paginacion
+spring.data.web.pageable.page-parameter=pagina
+spring.data.web.pageable.size-parameter=tamano
+spring.data.web.sort.sort-parameter=orden
