mejoras en TokenService

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.password=pa$$w0rd
 spring.data.web.pageable.page-parameter=pagina
 spring.data.web.pageable.size-parameter=tamano
 spring.data.web.sort.sort-parameter=orden
+
+#para el secret del token
+api.security.secret=secret-medico
