--- a/api/pom.xml
+++ b/api/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+		<!--Para documentacion -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 
 	</dependencies>
 
